6-networking/ingress/nginx-env-demo/deployment-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: dev
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-from-cm
          mountPath: /usr/share/nginx/html/
          readOnly: true
      volumes:
      - name: html-from-cm
        configMap:
          name: nginx-dev-homepage
