6-networking/ingress/nginx-env-demo/service-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev  
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
