6-networking/ingress/nginx-env-demo/ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-prod
  namespace: prod
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /nginxprod
          pathType: Exact
          backend:
            service:
              name: nginx-service
              port:
                number: 80
